--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
         "Accumlate",
         "ATTAK",
         "Curr",
+        "Datas",
         "levelno",
+        "pyrr",
         "RLAI",
         "wtil"
     ]
